# salmonbot

./: .gitignore  Cargo.toml  README.md
src/: behavior.rs  img_match.rs  main.rs  storage.rs  vkapi.rs
src/behavior/: chest.rs  gates.rs  stats.rs  stone.rs  test.rs
src/behavior/stone/: admin.rs  consts.rs
src/vkapi/: http.rs  long_poll.rs  messages.rs  photos.rs  types.rs  users.rs
tests/fixtures/: get_user.json  get_user_missing.json  long_poll_failed.json  long_poll_fwd_attachment.json  long_poll_fwd_post.json  long_poll_init.json  long_poll_reply_document.json  photo_message_upload.json
