[package]
name = "imbot"
version = "0.1.0"
authors = ["texbois"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["rt-core", "macros"] }
reqwest = "0.10"
async-trait = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bytes = "0.5"
image = "0.22"
img_hash = "3.0"
hamming = "0.1"

[profile.release]
lto = true
codegen-units = 1
