[package]
name = "imbot"
version = "0.1.0"
authors = ["texbois"]
edition = "2018"

[dependencies]
ureq = { version = "0.11", features = ["tls", "json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
image = "0.22"
img_hash = "3.0"
hamming = "0.1"

[profile.release]
lto = true
codegen-units = 1
