[package]
name = "imbot"
version = "0.1.0"
authors = ["texbois"]
edition = "2018"

[dependencies]
ureq = { version = "0.11", features = ["tls", "json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
image = { version = "0.23", features = ["jpeg", "jpeg_rayon"] }
img_hash = { git = "https://github.com/CryZe/img_hash", rev = "4cadae9e2607afa63965c7112a34ee27880a25ac" }
hamming = "0.1"

[patch.crates-io]
rustdct = { git = "https://github.com/ejmahler/rust_dct" }

[profile.release]
lto = true
codegen-units = 1
